--- a/ui/src/main/res/values-v21/styles.xml
+++ b/ui/src/main/res/values-v21/styles.xml
@@ -22,5 +22,6 @@
         <item name="materialAlertDialogTheme">@style/AppTheme.Dialog</item>
         <item name="actionBarPopupTheme">@style/ThemeOverlay.MaterialComponents.ActionBar</item>
         <item name="textInputStyle">@style/TextInputLayoutBase</item>
+        <item name="materialCardViewStyle">@style/AppTheme.MaterialCardView</item>
     </style>
 </resources>
